daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N5_wrong_field_type/expected_artifact.hex
4461796c696768742076302e36204d3120666978747572652061727469666163743a2056315f6d657461646174615f6f6e6c795f6f70656e
